<resources>
    <string name="app_name">WhereToEat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="edit">Edit</string>
    <string name="new_value">New Value</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="select_city">Select City:</string>
    <string name="sort_by">Sort By:</string>
    <string name="list_of_restaurants">List of Restaurants</string>
    <string name="details">Details</string>
    <string name="username">Username</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="favorites">Favorites</string>
    <string name="register">Register</string>
    <string name="add_a_picture">Add a picture:</string>
    <string name="phone">Phone</string>
    <string name="title">Title</string>
    <string name="_100">100 $</string>
</resources>